--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <!--Верхня лінія-->
     <header class="page-header">
-        <div class="container header-cont">
-            <a href="./index.html" class="logo-blue logo">Web<span class="logo-black logo">Studio</span></a>
-            <nav class="main-nav">
-                <ul class="site-nav list">
-                    <li class="item"><a class="header-link link current" href="./index.html">Студія</a></li>
-                    <li class="item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
-                    <li class="item"><a class="header-link link" href="#">Контакти</a></li>
+        <div class="container">
+            <a href="./index.html" class="logo">Web<span class="logo page--header__logo">Studio</span></a>
+            <nav class="navigation">
+                <ul class="navigation__list list">
+                    <li class="navigation__item"><a class="link navigation__link navigation__link--current" href="./index.html">Студія</a></li>
+                    <li class="navigation__item"><a class="link navigation__link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="navigation__item"><a class="link navigation__link" href="#">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="contact-nav list">
@@ -334,7 +334,7 @@
     <footer class="page-footer">
         <div class="container foter-conect">
             <div>
-                <a href="./index.html" class="logo-blue">Web<span class="logo-white">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo page--footer__logo">Studio</span></a>
                 <address>
                     <ul class="footer-link-end link">
                         <li>
