--- a/portfolio.html
+++ b/portfolio.html
@@ -15,30 +15,31 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
   <link rel="stylesheet" href="./css/styles.css">
 </head>
-
 <body>
   <!--Верхня лінія-->
   <header class="page-header">
-    <div class="container header-cont">
-      <a href="./index.html" class="logo-blue logo">Web<span class="logo-black logo">Studio</span></a>
-      <nav class="main-nav">
-        <ul class="site-nav list">
-          <li class="item"><a class="header-link link" href="./index.html">Студія</a></li>
-          <li class="item"><a class="header-link link current" href="./portfolio.html">Портфоліо</a></li>
-          <li class="item"><a class="header-link link" href="#">Контакти</a></li>
+    <div class="container">
+      <a href="./index.html" class="logo">Web<span class="logo page-header__logo">Studio</span></a>
+      <nav class="navigation">
+        <ul class="navigation__list list">
+          <li class="navigation__item"><a class="link navigation__link" href="./index.html">Студія</a></li>
+          <li class="navigation__item"><a class="link navigation__link navigation__link--current"
+              href="./portfolio.html">Портфоліо</a></li>
+          <li class="navigation__item"><a class="link navigation__link" href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contact-nav list">
-        <li class="item"><a class="contakt-link link" href="mailto:info@devstudio.com"><svg class="mail-icon" width="16"
-              height="12">
+      <ul class="navigation__contact list">
+        <li class="navigation__item"><a class="link header__link" href="mailto:info@devstudio.com"><svg
+              class="mail__icon" width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
         </li>
-        <li class="item"><a class="heder-tel-link" href="tel:+380961111111"><svg class="tel-icon" width="10" height="16">
+        <li class="navigation__item"><a class="link header__phone" href="tel:+380961111111"><svg class="tel__icon"
+              width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a></li>
       </ul>
-      </div>
+    </div>
   </header>
   <!--Main-->
   <main>
@@ -60,7 +61,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img1.jpg" alt="Технокряк" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -76,7 +78,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img2.jpg" alt="Постер" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -92,7 +95,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img3.jpg" alt="Ресторан" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -108,7 +112,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img4.jpg" alt="Проєкт" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -124,7 +129,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img5.jpg" alt="Проєкт Ящики" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -140,7 +146,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img6.jpg" alt="Натхнення не має кордонів" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -156,7 +163,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img7.jpg" alt="Видання" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -172,7 +180,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img8.jpg" alt="Проєкт Етикетка" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -188,7 +197,8 @@
               <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
                 <img class="flex-img" src="images/img9.jpg" alt="Зростаючий бізнес" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
@@ -200,8 +210,8 @@
             </a>
           </li>
         </ul>
-        </div>
-        </section>
+      </div>
+    </section>
   </main>
   <!--Підвал-->
   <footer class="page-footer">
@@ -265,6 +275,6 @@
         </div>
       </div>
   </footer>
-  </body>
-  
-  </html>
+</body>
+
+</html>
