--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 </ul>
             </nav>
             <ul class="navigation__contact list">
-                <li class="navigation__item"><a class="link header__link" href="mailto:info@devstudio.com"><svg
+                <li class="navigation__item"><a class="link navigation__link" href="mailto:info@devstudio.com"><svg
                             class="mail__icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a>
                 </li>
-                <li class="navigation__item"><a class="link header__phone" href="tel:+380961111111"><svg class="tel__icon"
+                <li class="navigation__item"><a class="link navigation__phone" href="tel:+380961111111"><svg class="tel__icon"
                             width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a></li>
@@ -54,50 +54,50 @@
             <div class="container">
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="features list">
-                    <li class="item">
-                        <div class="feature-icon">
-                            <a href="#" class="social-link link">
-                                <svg class="features-svg" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <a href="#" class="link">
+                                <svg class="features__svg" width="70" height="70">
                                     <use href="./images/icons.svg#icon-antenna"></use>
                                 </svg>
                             </a>
                         </div>
-                        <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="text-main">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                        <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="features__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
-                    <li class="item">
-                        <div class="feature-icon">
-                            <a href="#" class="social-link link">
-                                <svg class="features-svg" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <a href="#" class="link">
+                                <svg class="features__svg" width="70" height="70">
                                     <use href="./images/icons.svg#icon-clock"></use>
                                 </svg>
                             </a>
                         </div>
-                        <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="text-main">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="features__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="item">
-                        <div class="feature-icon">
-                            <a href="#" class="social-link link">
-                                <svg class="features-svg" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <a href="#" class="link">
+                                <svg class="features__svg" width="70" height="70">
                                     <use href="./images/icons.svg#icon-diagram"></use>
                                 </svg>
                             </a>
                         </div>
-                        <h3 class="title">ПЛАНУВАННЯ</h3>
-                        <p class="text-main">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <h3 class="features__title">ПЛАНУВАННЯ</h3>
+                        <p class="features__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="item">
-                        <div class="feature-icon">
-                            <a href="#" class="social-link link">
-                                <svg class="features-svg" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <a href="#" class="link">
+                                <svg class="features__svg" width="70" height="70">
                                     <use href="./images/icons.svg#icon-astronaut"></use>
                                 </svg>
                             </a>
                         </div>
-                        <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="text-main">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        <h3 class="features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="features__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </div>
