--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,12 @@
         </ul>
       </nav>
       <ul class="navigation__contact list">
-        <li class="navigation__item"><a class="link header__link" href="mailto:info@devstudio.com"><svg
+        <li class="navigation__item"><a class="link navigation__link" href="mailto:info@devstudio.com"><svg
               class="mail__icon" width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
         </li>
-        <li class="navigation__item"><a class="link header__phone" href="tel:+380961111111"><svg class="tel__icon"
+        <li class="navigation__item"><a class="link navigation__phone" href="tel:+380961111111"><svg class="tel__icon"
               width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a></li>
