--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
         <!--Чим ми займаємося-->
         <section class="section">
             <div class="container">
-                <h2 class="main-title what">Чим ми займаємося</h2>
-                <ul class="images">
-                    <li class="item"><img src="images/picture1.jpg" alt="картинка1.jpg" width="370" height="294">
+                <h2 class="section__title section__title--applications">Чим ми займаємося</h2>
+                <ul class="section__images">
+                    <li class="section__item"><img src="images/picture1.jpg" alt="картинка1.jpg" width="370" height="294">
                         <div class="label">
-                            <p class="label-text">Десктопні додатки</p>
+                            <p class="label__text">Десктопні додатки</p>
                         </div>
                     </li>
-                    <li class="item"><img src="images/picture2.jpg" alt="картинка2.jpg" width="370" height="294">
+                    <li class="section__item"><img src="images/picture2.jpg" alt="картинка2.jpg" width="370" height="294">
                         <div class="label">
-                            <p class="label-text">Мобільні додатки</p>
+                            <p class="label__text">Мобільні додатки</p>
                         </div>
                     </li>
-                    <li class="item"><img src="images/picture3.jpg" alt="картинка3.jpg" width="370" height="294">
+                    <li class="section__item"><img src="images/picture3.jpg" alt="картинка3.jpg" width="370" height="294">
                         <div class="label">
-                            <p class="label-text">Дизайнерські рішення</p>
+                            <p class="label__text">Дизайнерські рішення</p>
                         </div>
                     </li>
                 </ul>
@@ -128,7 +128,7 @@
         <!--Наша команда-->
         <section class="section team">
             <div class="container container-foto">
-                <h2 class="main-title our">Наша команда</h2>
+                <h2 class="section__title our">Наша команда</h2>
                 <ul class="main-page-foto">
                     <li class="main-foto">
                         <img class="foto" src="images/demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
@@ -283,7 +283,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <h2 class="main-title">Постійні клієнти</h2>
+                <h2 class="section__title">Постійні клієнти</h2>
                 <ul class="clients-list">
                     <li class="client-item">
                         <a href="#" class="client-link link">
