--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
             </div>
         </section>
         <!--Наша команда-->
-        <section class="section team">
+        <section class="section section-team">
             <div class="container container-foto">
-                <h2 class="section__title our">Наша команда</h2>
-                <ul class="main-page-foto">
-                    <li class="main-foto">
-                        <img class="foto" src="images/demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                        <div class="foto-title">
-                            <h3 class="name-title">Ігор Дем'яненко</h3>
-                            <p class="text">Product Designer</p>
+                <h2 class="section__title">Наша команда</h2>
+                <ul class="personal-foto">
+                    <li class="personal-foto__item">
+                        <img class="personal-foto__img" src="images/demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                        <div class="text">
+                            <h3 class="text__name">Ігор Дем'яненко</h3>
+                            <p class="text__profession">Product Designer</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -167,11 +167,11 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="main-foto">
-                        <img class="foto" src="images/repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                        <div class="foto-title">
-                            <h3 class="name-title">Ольга Рєпіна</h3>
-                            <p class="text">Frontend Developer</p>
+                    <li class="personal-foto__item">
+                        <img class="personal-foto__img" src="images/repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                        <div class="text">
+                            <h3 class="text__name">Ольга Рєпіна</h3>
+                            <p class="text__profession">Frontend Developer</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -204,11 +204,11 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="main-foto">
-                        <img class="foto" src="images/tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
-                        <div class="foto-title">
-                            <h3 class="name-title">Микола Тарасов</h3>
-                            <p class="text">Marketing</p>
+                    <li class="personal-foto__item">
+                        <img class="personal-foto__img" src="images/tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
+                        <div class="text">
+                            <h3 class="text__name">Микола Тарасов</h3>
+                            <p class="text__profession">Marketing</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -241,11 +241,11 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="main-foto">
-                        <img class="foto" src="images/yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                        <div class="foto-title">
-                            <h3 class="name-title">Михайло Єрмаков</h3>
-                            <p class="text">UI Designer</p>
+                    <li class="personal-foto__item">
+                        <img class="personal-foto__img" src="images/yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                        <div class="text">
+                            <h3 class="text__name">Михайло Єрмаков</h3>
+                            <p class="text__profetional">UI Designer</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -330,7 +330,7 @@
                 </ul>
             </div>
         </section>
-    </main>
+        </main>
     <!--Підвал-->
     <footer class="page-footer">
         <div class="container foter-conect">
