--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <ul class="personal-foto">
                     <li class="personal-foto__item">
                         <img class="personal-foto__img" src="images/demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                        <div class="text">
-                            <h3 class="text__name">Ігор Дем'яненко</h3>
-                            <p class="text__profession">Product Designer</p>
+                        <div class="member">
+                            <h3 class="member__name">Ігор Дем'яненко</h3>
+                            <p class="member__position">Product Designer</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -169,9 +169,9 @@
                     </li>
                     <li class="personal-foto__item">
                         <img class="personal-foto__img" src="images/repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                        <div class="text">
-                            <h3 class="text__name">Ольга Рєпіна</h3>
-                            <p class="text__profession">Frontend Developer</p>
+                        <div class="member">
+                            <h3 class="member__name">Ольга Рєпіна</h3>
+                            <p class="member__position">Frontend Developer</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -206,9 +206,9 @@
                     </li>
                     <li class="personal-foto__item">
                         <img class="personal-foto__img" src="images/tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
-                        <div class="text">
-                            <h3 class="text__name">Микола Тарасов</h3>
-                            <p class="text__profession">Marketing</p>
+                        <div class="member">
+                            <h3 class="member__name">Микола Тарасов</h3>
+                            <p class="member__position">Marketing</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -243,9 +243,9 @@
                     </li>
                     <li class="personal-foto__item">
                         <img class="personal-foto__img" src="images/yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                        <div class="text">
-                            <h3 class="text__name">Михайло Єрмаков</h3>
-                            <p class="text__profetional">UI Designer</p>
+                        <div class="member">
+                            <h3 class="member__name">Михайло Єрмаков</h3>
+                            <p class="member__position">UI Designer</p>
                         </div>
                         <ul class="social-icons list">
                             <li class="social-item">
@@ -285,44 +285,44 @@
             <div class="container">
                 <h2 class="section__title">Постійні клієнти</h2>
                 <ul class="clients-list">
-                    <li class="client-item">
-                        <a href="#" class="client-link link">
-                            <svg class="client-icon" width="106" height="60">
+                    <li class="clients-list__item">
+                        <a href="#" class="clients-list__link link">
+                            <svg class="clients-list__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a href="#" class="client-link link">
-                            <svg class="client-icon" width="106" height="60">
+                    <li class="clients-list__item">
+                        <a href="#" class="clients-list__link link">
+                            <svg class="clients-list__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a href="#" class="client-link link">
-                            <svg class="client-icon" width="106" height="60">
+                    <li class="clients-list__item">
+                        <a href="#" class="clients-list__link link">
+                            <svg class="clients-list__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a href="#" class="client-link link">
-                            <svg class="client-icon" width="106" height="60">
+                    <li class="clients-list__item">
+                        <a href="#" class="clients-list__link link">
+                            <svg class="clients-list__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a href="#" class="client-link link">
-                            <svg class="client-icon" width="106" height="60">
+                    <li class="clients-list__item">
+                        <a href="#" class="clients-list__link link">
+                            <svg class="clients-list__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a href="#" class="client-link link">
-                            <svg class="client-icon" width="106" height="60">
+                    <li class="clients-list__item">
+                        <a href="#" class="clients-list__link link">
+                            <svg class="clients-list__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-6"></use>
                             </svg>
                         </a>
