--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     </li>
                     <li class="clients-list__item">
                         <a href="#" class="clients-list__link link">
-                            <svg class="clients-list__icon" width="106" height="60">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-6"></use>
                             </svg>
                         </a>
