--- a/portfolio.html
+++ b/portfolio.html
@@ -48,164 +48,165 @@
       <div class="container">
         <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="portf-button">
-          <li class="item"><button class="portfolio-button-first" type="button">Усі</button></li>
+          <li class="item"><button class="portfolio-button" type="button">Усі</button></li>
           <li class="item"><button class="portfolio-button" type="button">Веб-сайти</button></li>
           <li class="item"><button class="portfolio-button" type="button">Додатки</button></li>
           <li class="item"><button class="portfolio-button" type="button">Дизайн</button></li>
           <li class="item"><button class="portfolio-button" type="button">Маркетинг</button></li>
         </ul>
         <!--Демонстрація-->
-        <ul class="flex-container">
-          <li class="item">
-            <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img1.jpg" alt="Технокряк" width="370" height="294">
+        <ul class="project-images">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
+              <div class="img-wrapper">
+                <img class="img-wrapper__card" src="images/img1.jpg" alt="Технокряк" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div>
+              <div class="description">
+                <h2 class="description__title">Технокряк</h2>
+                <p class="description__text">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
+            <div class="img-wrapper">
+                <img class="img-wrapper__card" src="images/img2.jpg" alt="Постер" width="370" height="294">
+                <div class="portfolio-overlay">
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Технокряк</h2>
-              <p class="section-text">Веб-сайт</p>
+            <div class="description">
+              <h2 class="description__title">Постер New Orlean vs Golden Star</h2>
+              <p class="description__text">Дизайн</p>
             </div>
             </a>
           </li>
-          <li class="item">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
             <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img2.jpg" alt="Постер" width="370" height="294">
+                <img class="img-wrapper__card" src="images/img3.jpg" alt="Ресторан" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-              <p class="section-text">Дизайн</p>
+            <div class="description">
+              <h2 class="description__title">Ресторан Seafood</h2>
+              <p class="description__text">Додаток</p>
             </div>
             </a>
           </li>
-          <li class="item">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
             <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img3.jpg" alt="Ресторан" width="370" height="294">
+                <img class="img-wrapper__card" src="images/img4.jpg" alt="Проєкт" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Ресторан Seafood</h2>
-              <p class="section-text">Додаток</p>
+            <div class="description">
+              <h2 class="description__title">Проєкт Prime</h2>
+              <p class="description__text">Маркетинг</p>
             </div>
             </a>
           </li>
-          <li class="item">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
             <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img4.jpg" alt="Проєкт" width="370" height="294">
+                <img class="img-wrapper__card" src="images/img5.jpg" alt="Проєкт Ящики" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Проєкт Prime</h2>
-              <p class="section-text">Маркетинг</p>
+            <div class="description">
+              <h2 class="description__title">Проєкт Boxes</h2>
+              <p class="description__text">Додаток</p>
             </div>
             </a>
           </li>
-          <li class="item">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
             <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img5.jpg" alt="Проєкт Ящики" width="370" height="294">
+                <img class="img-wrapper__card" src="images/img6.jpg" alt="Натхнення не має кордонів" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Проєкт Boxes</h2>
-              <p class="section-text">Додаток</p>
+            <div class="description">
+              <h2 class="description__title">Inspiration has no Borders</h2>
+              <p class="description__text">Веб-сайт</p>
             </div>
             </a>
           </li>
-          <li class="item">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
             <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img6.jpg" alt="Натхнення не має кордонів" width="370" height="294">
+                <img class="img-wrapper__card" src="images/img7.jpg" alt="Видання" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Inspiration has no Borders</h2>
-              <p class="section-text">Веб-сайт</p>
+            <div class="description">
+              <h2 class="description__title">Видання Limited Edition</h2>
+              <p class="description__text">Дизайн</p>
             </div>
             </a>
           </li>
-          <li class="item">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
             <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img7.jpg" alt="Видання" width="370" height="294">
+                <img class="img-wrapper__card" src="images/img8.jpg" alt="Проєкт Етикетка" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Видання Limited Edition</h2>
-              <p class="section-text">Дизайн</p>
+            <div class="description">
+              <h2 class="description__title">Проєкт LAB</h2>
+              <p class="description__text">Маркетинг</p>
             </div>
             </a>
           </li>
-          <li class="item">
+          <li class="project-images__item">
+            <a class="img-wrapper-link" href="#" target="_blank" rel="noopener noreferrer noffolow">
             <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img8.jpg" alt="Проєкт Етикетка" width="370" height="294">
+                <img class="img-wrapper__card" src="images/img9.jpg" alt="Зростаючий бізнес" width="370" height="294">
                 <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  <p class="portfolio-overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це
                     дозволить відвідувачу отримати
                     вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
             </div>
-            <div class="flex-text">
-              <h2 class="section-title">Проєкт LAB</h2>
-              <p class="section-text">Маркетинг</p>
-            </div>
-            </a>
-          </li>
-          <li class="item">
-            <div class="img-wrapper">
-              <a class="port-hover" href="#" target="_blank" rel="noopener noreferrer noffolow">
-                <img class="flex-img" src="images/img9.jpg" alt="Зростаючий бізнес" width="370" height="294">
-                <div class="portfolio-overlay">
-                  <p class="text-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.</p>
-                </div>
-            </div>
-            <div class="flex-text">
-              <h2 class="section-title">Growing Business</h2>
-              <p class="section-text">Додаток</p>
+            <div class="description">
+              <h2 class="description__title">Growing Business</h2>
+              <p class="description__text">Додаток</p>
             </div>
             </a>
           </li>
