--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     </li>
                     <li class="clients-list__item">
                         <a href="#" class="clients-list__link link">
-                            <svg class="client-icon" width="106" height="60">
+                            <svg class="clients-list__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo-6"></use>
                             </svg>
                         </a>
@@ -333,46 +333,46 @@
         </main>
     <!--Підвал-->
     <footer class="page-footer">
-        <div class="container foter-conect">
+        <div class="container footer-conect">
             <div>
                 <a href="./index.html" class="logo">Web<span class="logo page-footer__logo">Studio</span></a>
                 <address>
-                    <ul class="footer-link-end link">
+                    <ul class="footer-nav">
                         <li>
-                            <p class="footer-addres">м. Київ, пр-т Лесі Українки, 26</p>
+                            <p class="footer-nav__addres">м. Київ, пр-т Лесі Українки, 26</p>
                         </li>
-                        <li><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <li><a class="footer-nav__link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li><a class="footer-tel-link link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                        <li><a class="footer-nav__tel link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
-            <div class="footer-end">
-                <h3 class="footer-title">приєднуйтесь</h3>
-                <ul class="social-icons-footer list">
-                    <li class="social-item">
-                        <a href="#" class="social-link link">
+            <div class="footer-icons">
+                <h3 class="footer-icons__title">приєднуйтесь</h3>
+                <ul class="footer-icons__list list">
+                    <li class="footer-icons__item">
+                        <a href="#" class="footer-icons__link link">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item">
-                        <a href="#" class="social-link link">
+                    <li class="footer-icons__item">
+                        <a href="#" class="footer-icons__link link">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item">
-                        <a href="#" class="social-link link">
+                    <li class="footer-icons__item">
+                        <a href="#" class="footer-icons__link link">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item">
-                        <a href="#" class="social-link link">
+                    <li class="footer-icons__item">
+                        <a href="#" class="footer-icons__link link">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
@@ -381,19 +381,19 @@
                 </ul>
             </div>
             <form name="form-comunication" class="footer-modal-form">
-            <div class="footer-form">
-                <h3 class="footer-title">Підпишіться на розсилку</h3>
-                <div class="footer-buttons">
-                    <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
-                    <button type="submit" class="hero__button button-footer">Підписатися<svg class="icon-send" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-send"></use>
-                        </svg>
-                    </button>
+                <div class="footer-form">
+                    <h3 class="footer-title">Підпишіться на розсилку</h3>
+                    <div class="footer-buttons">
+                        <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
+                        <button type="submit" class="hero__button button-footer">Підписатися<svg class="icon-send"
+                                width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
-            </div>
             </form>
-            </div>
+        </div>
     </footer>
     <div class="modal-backdrop is-hidden" data-modal>
         <div class="modal">
