--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 </address>
             </div>
             <div class="footer-icons">
-                <h3 class="footer-icons__title">приєднуйтесь</h3>
+                <h3 class="footer-title">приєднуйтесь</h3>
                 <ul class="footer-icons__list list">
                     <li class="footer-icons__item">
                         <a href="#" class="footer-icons__link link">
@@ -385,7 +385,7 @@
                     <h3 class="footer-title">Підпишіться на розсилку</h3>
                     <div class="footer-buttons">
                         <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
-                        <button type="submit" class="hero__button button-footer">Підписатися<svg class="icon-send"
+                        <button type="submit" class="hero__button hero__button--footer">Підписатися<svg class="icon-send"
                                 width="24" height="24">
                                 <use href="./images/icons.svg#icon-send"></use>
                             </svg>
