--- a/portfolio.html
+++ b/portfolio.html
@@ -215,67 +215,70 @@
     </section>
   </main>
   <!--Підвал-->
-  <footer class="page-footer">
-    <div class="container foter-conect">
-      <div>
-        <a href="./index.html" class="logo-blue">Web<span class="logo-white">Studio</span></a>
-        <address>
-          <ul class="footer-link-end link">
-            <li>
-              <p class="footer-addres">м. Київ, пр-т Лесі Українки, 26</p>
-            </li>
-            <li><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li><a class="footer-tel-link link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
-          </ul>
-        </address>
-      </div>
-      <div class="footer-end">
-        <h3 class="footer-title">приєднуйтесь</h3>
-        <ul class="social-icons-footer list">
-          <li class="social-item">
-            <a href="#" class="social-link link">
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
+<footer class="page-footer">
+  <div class="container footer-conect">
+    <div>
+      <a href="./index.html" class="logo">Web<span class="logo page-footer__logo">Studio</span></a>
+      <address>
+        <ul class="footer-nav">
+          <li>
+            <p class="footer-nav__addres">м. Київ, пр-т Лесі Українки, 26</p>
           </li>
-          <li class="social-item">
-            <a href="#" class="social-link link">
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
+          <li><a class="footer-nav__link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="social-item">
-            <a href="#" class="social-link link">
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="#" class="social-link link">
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
+          <li><a class="footer-nav__tel link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
         </ul>
-      </div>
-      <form name="form-comunication" class="footer-modal-form"></form>
+      </address>
+    </div>
+    <div class="footer-icons">
+      <h3 class="footer-title">приєднуйтесь</h3>
+      <ul class="footer-icons__list list">
+        <li class="footer-icons__item">
+          <a href="#" class="footer-icons__link link">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-icons__item">
+          <a href="#" class="footer-icons__link link">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-icons__item">
+          <a href="#" class="footer-icons__link link">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-icons__item">
+          <a href="#" class="footer-icons__link link">
+            <svg class="social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <form name="form-comunication" class="footer-modal-form">
       <div class="footer-form">
         <h3 class="footer-title">Підпишіться на розсилку</h3>
         <div class="footer-buttons">
           <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
-          <button type="submit" class="button-primary button-footer">Підписатися<svg class="icon-send" width="24"
+          <button type="submit" class="hero__button hero__button--footer">Підписатися<svg class="icon-send" width="24"
               height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </button>
         </div>
       </div>
-  </footer>
+    </form>
+  </div>
+</footer>
+</footer>
 </body>
 
 </html>
