BEM (modal-form)

--- a/portfolio.html
+++ b/portfolio.html
@@ -263,11 +263,11 @@
         </li>
       </ul>
     </div>
-    <form name="form-comunication" class="footer-modal-form">
-      <div class="footer-form">
+    <form name="form-comunication" class="footer-form">
+      <div class="footer-wrapper">
         <h3 class="footer-title">Підпишіться на розсилку</h3>
-        <div class="footer-buttons">
-          <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
+        <div class="footer-form__buttons">
+          <label><input name="footer-mail" type="email" class="footer-form__input" placeholder="E-mail"></label>
           <button type="submit" class="hero__button hero__button--footer">Підписатися<svg class="icon-send" width="24"
               height="24">
               <use href="./images/icons.svg#icon-send"></use>
@@ -277,6 +277,8 @@
       </div>
     </form>
   </div>
+</footer>
+</div>
 </footer>
 </footer>
 </body>
