--- a/index.html
+++ b/index.html
@@ -380,11 +380,11 @@
                     </li>
                 </ul>
             </div>
-            <form name="form-comunication" class="footer-modal-form">
-                <div class="footer-form">
+            <form name="form-comunication" class="footer-form">
+                <div class="footer-wrapper">
                     <h3 class="footer-title">Підпишіться на розсилку</h3>
-                    <div class="footer-buttons">
-                        <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
+                    <div class="footer-form__buttons">
+                        <label><input name="footer-mail" type="email" class="footer-form__input" placeholder="E-mail"></label>
                         <button type="submit" class="hero__button hero__button--footer">Підписатися<svg class="icon-send"
                                 width="24" height="24">
                                 <use href="./images/icons.svg#icon-send"></use>
@@ -404,40 +404,40 @@
             </button>
             <form name="form-comunication" class="modal-form">
                 <p class="text-form">Залиште свої дані, ми вам передзвонимо</p>
-                <div class="input-line">
-                    <label for="user-name" class="modal-label">Ім'я</label>
-                    <div class="input-wrapper">
-                        <input name="user-name" id="user-name" type="text" class="modal-input" />
-                        <svg class="input-icon" width="18" height="18">
+                <div class="modal-form__line">
+                    <label for="user-name" class="modal-form__label">Ім'я</label>
+                    <div class="modal-form__wrapper">
+                        <input name="user-name" id="user-name" type="text" class="modal-form__input" />
+                        <svg class="modal-form__icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                     </div>
                 </div>
-                <div class="input-line">
-                    <label for="user-tel" class="modal-label">Телефон</label>
-                    <div class="input-wrapper">
-                        <input name="user-tel" id="user-tel" type="tel" class="modal-input" />
-                        <svg class="input-icon" width="18" height="18">
+                <div class="modal-form__line">
+                    <label for="user-tel" class="modal-form__label">Телефон</label>
+                    <div class="modal-form__wrapper">
+                        <input name="user-tel" id="user-tel" type="tel" class="modal-form__input" />
+                        <svg class="modal-form__icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
-                <div class="input-line">
-                    <label for="user-mail" class="modal-label">Пошта</label>
-                    <div class="input-wrapper">
-                        <input name="user-mail" id="user-mail" type="email" class="modal-input" />
-                        <svg class="input-icon" width="18" height="18">
+                <div class="modal-form__line">
+                    <label for="user-mail" class="modal-form__label">Пошта</label>
+                    <div class="modal-form__wrapper">
+                        <input name="user-mail" id="user-mail" type="email" class="modal-form__input" />
+                        <svg class="modal-form__icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
-                <label for="user-text" class="modal-label">Коментар</label>
+                <label for="user-text" class="modal-form__label">Коментар</label>
                 <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
-                <div class="input-line check-line">
+                <div class="modal-form__line check-line">
                     <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
                     <label for="checkbox-agree" class="checkbox-agree">
-                        <span class="icon-wrapper">
-                            <svg class="icon-check" width="16" height="16">
+                        <span class="checkbox-agree__icon-wrapper">
+                            <svg class="checkbox-agree__icon-check" width="16" height="16">
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
